# django-terms-db

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
example/: dev.db  settings.py  urls.py
example/templates/: base.html
example/templates/snippets/: navbar.html  search.html
terms/: __init__.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py
terms/management/commands/: linux_terms.py
terms/migrations/: 0001_initial.py  0002_auto_20160519_0058.py  0003_auto_20160519_0101.py  0004_auto_20160519_0103.py  0005_auto_20160519_2110.py  0006_snippet_snippets.py  0007_auto_20160520_1517.py
terms/templates/snippets/: snippet_detail.html  snippet_list.html
terms/templates/snippets/snippets/: search.html
terms/templates/terms/: term_detail.html  term_list.html
terms/templates/terms/snippets/: search.html
